# CatchPhish

./: .gitignore  README.md  package-lock.json  package.json  server.js
Addon/: background.js  block.html  content.js  manifest.json  popup.html  popup.js  rules.json
App/: build.gradle.kts  local.properties  rust-toolchain.toml
App/app/: build.gradle.kts
App/baselineProfile/: build.gradle.kts
App/gradle/: libs.versions.toml
App/libnet/: Cargo.toml
App/libnet/src/: lib.rs
backend/: .env  app.py  constraints.txt  domain-names.txt  index.js  logo.py  package-lock.json  package.json  reports.db  requirements.txt  sendr.py  server.js  test.py  vision_api.json
backend/config/: db.js
backend/filled_reports/: cert_report_asesoriaonlinedesdecasa_sbs_20250317_110231.docx  cert_report_claude_ai_20250317_210651.docx  cert_report_deon_menezes_20250318_063802.docx  cert_report_dskjkfegbpne_xyz_20250317_211012.docx  cert_report_ebay_ebayshoo_com_20250317_105943.docx  cert_report_google_com_20250317_173232.docx  cert_report_gucci_com_20250318_064438.docx  cert_report_gucci_com_20250318_064514.docx  cert_report_lms_kjsce_somaiya_edu_20250317_223709.docx  cert_report_loginkucoin_elog_webflow_io_20250315_195825.docx  cert_report_pradyum_me_20250317_143032.docx  cert_report_pradyum_me_20250318_062144.docx  cert_report_pradyum_me_20250318_064339.docx  cert_report_pradyum_me_20250318_092014.docx  cert_report_resultmenowxx_wixsite_com_20250317_191949.docx  (+8 more)
backend/middleware/: auth.js
frontend/: package-lock.json  package.json  tailwind.config.js
models/: User.js
(+117 files in other folders)
