[package]
name = "net"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "net"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
etherparse = "0.17.0"
libc = "0.2.170"
log = "0.4.26"
polling = "3.7.4"
simple-dns = "0.10.0"
socket2 = "0.5.8"
thiserror = "2.0.12"
uniffi = { version = "0.29.0", features = ["cli"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"

[profile.release]
lto = "fat"
